# nlbayes-python

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  setup_requirements.txt
libnlbayes/: Makefile
libnlbayes/include/: Beta.h  Dirichlet.h  GraphBase.h  GraphORNOR.h  HNode.h  HNodeORNOR.h  HParentNode.h  ModelBase.h  ModelORNOR.h  Multinomial.h  NodeDictionary.h  RVNode.h  SNode.h  TNode.h  XNode.h  YDataNode.h  YNoiseNode.h
libnlbayes/src/: Beta.cpp  Dirichlet.cpp  GraphBase.cpp  GraphORNOR.cpp  HNode.cpp  HNodeORNOR.cpp  HParentNode.cpp  ModelBase.cpp  ModelORNOR.cpp  Multinomial.cpp  NodeDictionary.cpp  RVNode.cpp  SNode.cpp  TNode.cpp  XNode.cpp  YDataNode.cpp  YNoiseNode.cpp
nlbayes/: ModelORNOR.pxd  ModelORNOR.pyx  __init__.py  _version.py  ornor.py  utils.py
nlbayes/commands/: generate_data.py  ornor_inference.py  simulation.py
nlbayes/examples/: TF-inference-simulation.ipynb  TF-inference.ipynb  simulated_data.py  small_example.py  tf_inference_simulation.py
