[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "Cython>=3.0.0",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "nlbayes"
version = "0.8.0"
authors = [
    {name = "Argenis Arriojas", email = "arriojasmaldonado001@umb.edu"},
]
description = "A Bayesian Networks approach for infering active Transcription Factors using logic models of transcriptional regulation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "cython>=3.0.0",
    "CythonGSL @ git+https://github.com/twiecki/CythonGSL.git",
    "matplotlib",
    "numpy",
    "pandas",
    "plotext",
    "psutil",
    "scikit-learn",
    "scipy",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/umbibio/nlbayes-python"
Repository = "https://github.com/umbibio/nlbayes-python.git"

[project.scripts]
nlb-ornor-inference = "nlbayes.commands.ornor_inference:main"
nlb-inference = "nlbayes.commands.ornor_inference:main"
nlb-simulation = "nlbayes.commands.simulation:main"
nlb-generate-data = "nlbayes.commands.generate_data:main"

[tool.setuptools]
packages = ["nlbayes", "nlbayes.commands", "nlbayes.examples"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.h", "*.cpp"]
